# shadow

./: .gitignore  README.md
frontend/: .env.sample  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/trading/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/transfer/: page.tsx
frontend/src/components/BottomNav/: index.tsx
frontend/src/components/Dashboard/: index.tsx
frontend/src/components/PageLayout/: index.tsx
frontend/src/components/Pay/: index.tsx
frontend/src/components/TradingViewWidget/: index.tsx
frontend/src/components/UserInfo/: index.tsx
frontend/src/components/Verify/: index.tsx
frontend/src/hooks/: useMultiChainBalance.ts
my-first-mini-app/: package.json
my-first-mini-app/src/app/dashboard/: page.tsx
my-first-mini-app/src/app/transactions/: page.tsx
sdp/contracts/cache/: solidity-files-cache.json
sdp/contracts/src/: SdpSettlement.sol
sdp/ecloud/: Cargo.toml
sdp/ecloud/src/: handlers.rs  main.rs  settler.rs  types.rs
sdp/sdp-ecloud/: .env  .env.example
sdp/sdp-ecloud/src/: main.rs
workflow/: WORKFLOW.md  go.mod  go.sum  project.yaml  secrets.yaml
workflow/contracts/evm/src/: AuraVault.sol
workflow/shadow/: workflow.go  workflow.yaml  workflow_test.go
workflow/vault/: config.production.json  config.staging.json  crypto.go  event.go  handler.go  main.go  matcher.go  types.go  util.go  workflow.yaml
(+9 files in other folders)
