[package]
name = "shadow-matcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shadow-matcher"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
ethers = { version = "2", features = ["abigen", "legacy"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
